[waybar] spacing fix

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -65,6 +65,7 @@ window#waybar.empty #window {
   color: @lavender;
   border-radius: 1rem;
   margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 #custom-notification {
